--- a/style.css
+++ b/style.css
@@ -93,6 +93,43 @@ main > section{
   margin: 130px;
   max-width: 530px;
 }
+
+/*  features-section-title*/
+#features-section-title{
+  border-left: 5px solid #FF900E;
+  padding-left: 20px;
+}
+.features{
+  gap: 140px;
+}
+.features-card{
+  padding: 30px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+  margin-bottom: 20px;
+  border-radius: 8px;
+}
+.features-card .features-title{
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-top: 0;
+  margin-bottom: 0;
+  
+  
+}
+.features-architect{
+  width: 100%;
+}
+#experience-badge{
+  padding: 45px 42px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-left: -100px;
+  margin-top: -100px;
+}
+#experience-year{
+  font-size: 4rem;
+  font-weight: 700;
+}
 /* some fact  */
 .fact{
   border: 1px solid #FF900E;
@@ -140,6 +177,7 @@ main > section{
 @media screen and (max-width: 576px){
   .navbar, 
   .nav-links, 
+  .features,
   .teams{
     flex-direction: column;
   }
@@ -155,6 +193,10 @@ main > section{
     gap: 24px;
   }
   .our-features{
+    margin-left: 20px;
+  }
+  #experience-badge{
+    margin-top: 20px;
     margin-left: 20px;
   }
   
@@ -175,5 +217,11 @@ main > section{
     grid-template-columns: repeat(3, 1fr);
     gap: 50px;
     justify-items: center;
+
   }
+    #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+  
 }
